// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clean jobs that are active 1`] = `"form validation failed."`;

exports[`clean jobs that are delayed 1`] = `"form validation failed."`;

exports[`clean jobs that are paused 1`] = `"form validation failed."`;

exports[`clean jobs that are waiting 1`] = `"form validation failed."`;

exports[`count all state jobs by defaults 1`] = `
Object {
  "active": 0,
  "completed": 0,
  "failed": 0,
  "waiting": 0,
}
`;

exports[`delete job by id 1`] = `Object {}`;

exports[`get job by id 1`] = `
Object {
  "attemptsMade": 0,
  "data": Object {
    "data": 1,
  },
  "delay": 0,
  "failedReason": undefined,
  "finishedOn": undefined,
  "id": "1",
  "name": "__default__",
  "opts": Object {
    "attempts": 1,
    "backoff": undefined,
    "delay": 0,
    "timestamp": Any<Number>,
  },
  "processedOn": undefined,
  "progress": 0,
  "queue": Object {
    "name": "test",
  },
  "returnvalue": null,
  "stacktrace": Array [],
  "state": "waiting",
  "timestamp": Any<Number>,
}
`;

exports[`get jobs by defaults 1`] = `
Object {
  "index": 0,
  "items": Array [
    Object {
      "attemptsMade": 0,
      "data": Object {
        "data": 1,
      },
      "delay": 0,
      "failedReason": undefined,
      "finishedOn": undefined,
      "id": "1",
      "name": "__default__",
      "opts": Object {
        "attempts": 1,
        "backoff": undefined,
        "delay": 0,
        "timestamp": Any<Number>,
      },
      "processedOn": undefined,
      "progress": 0,
      "queue": Object {
        "name": "test",
      },
      "returnvalue": null,
      "stacktrace": Array [],
      "state": undefined,
      "timestamp": Any<Number>,
    },
  ],
  "size": 20,
  "total": 1,
}
`;

exports[`get jobs by failed queries: extra 1`] = `
Array [
  Object {
    "actual": "a",
    "expected": "/^d*$/",
    "field": "index",
    "message": "The 'index' field fails to match the required pattern.",
    "type": "stringPattern",
  },
  Object {
    "actual": "b",
    "expected": "/^d*$/",
    "field": "size",
    "message": "The 'size' field fails to match the required pattern.",
    "type": "stringPattern",
  },
  Object {
    "actual": "c",
    "expected": "waiting, active, completed, failed",
    "field": "state",
    "message": "The 'state' field does not match any of the allowed values.",
    "type": "stringEnum",
  },
]
`;

exports[`get jobs by failed queries: message 1`] = `"form validation failed."`;

exports[`get jobs that are waiting 1`] = `
Object {
  "index": 0,
  "items": Array [
    Object {
      "attemptsMade": 0,
      "data": Object {
        "data": 1,
      },
      "delay": 0,
      "failedReason": undefined,
      "finishedOn": undefined,
      "id": "1",
      "name": "__default__",
      "opts": Object {
        "attempts": 1,
        "backoff": undefined,
        "delay": 0,
        "timestamp": Any<Number>,
      },
      "processedOn": undefined,
      "progress": 0,
      "queue": Object {
        "name": "test",
      },
      "returnvalue": null,
      "stacktrace": Array [],
      "state": undefined,
      "timestamp": Any<Number>,
    },
  ],
  "size": 20,
  "total": 1,
}
`;

exports[`retry job by id 1`] = `Object {}`;
